 - Kingdom patrol/Bandit encounter on the plains.
 - Meeting a desert caravan.
 - Hitching a ride to Rigard (short, at random).
* New patreon sponsored content by Ben - Gay sex with Estevan (atm you need to be a guy to get this). There's two scenes available:
 - Blowjob.
 - Get fucked.
* It now takes significantly longer to travel between hub locations (Rigard, Crossroads, Desert, Lake, Forest).

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3q2
-------------
* Fixed Terry Orvin talk. This should also fix the issue with Terry's appearance screen.
* Fixed bug in equine get fucked loss.

Version 0.3q
------------
* Lots of typo fixes.
* New patreon sponsored content by Jo Rhade:
 - Equines win, ride stallion (requires pussy).
* New patreon sponsored content by LonelyRonin:
 - Naga win, fuck her (requires real cock).
* New patreon sponsored content by Del:
 - Random exploration scenes for the plains/forest/desert.
* You can no longer become pregnant from lizard tails.
* Fuckhuge terry pitch vaginal scene done. Like, huge. 16k words.
* Jeanne can now craft some alchemy items that can change your gender.
* You need some ingredients to make the Homos item first though.
 - Spring water can be found in the forest.
 - Hummus can be bought from Patchwork (and sometimes Cale).
 - Letter can be found in a Rigard event.
* There is a new short scene between Terry and Orvin, if you have him in your party. Thanks LD and Del for the help!
* Revised Miranda's tavern prompt, which was a mess.
 - Added the 'background' and 'conquests' bits to the regular talk options, previously only available through dates. (Poke me if you see something that doesn't make sense playing out in the tavern)
 - The 'conquests' option now has a new interaction with Terry, if he's in your party. Thanks for the help LD!