@@ -15,6 +15,9 @@ Version 0.3r
  - Blowjob.
  - Get fucked.
 * It now takes significantly longer to travel between hub locations (Rigard, Crossroads, Desert, Lake, Forest).
+* New TF items added to Rosalin:
+ - Avia.
+
 
 --------------------------------------------
              PREVIOUS VERSIONS
